{
    "name": "GamepadInput",
    "maps": [
        {
            "name": "Gamepad Control",
            "id": "47ab8a32-04ae-4f6a-82e0-0bff67ef05a3",
            "actions": [
                {
                    "name": "LeftStickMove",
                    "type": "Value",
                    "id": "cc25db88-c5b7-4ff6-bad7-8f7166d239a8",
                    "expectedControlType": "Stick",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "RightStickMove",
                    "type": "Value",
                    "id": "7ed2abd1-45d5-4f88-b6d7-1f658c300379",
                    "expectedControlType": "Stick",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "CameraLeft",
                    "type": "Value",
                    "id": "d64c5698-9d31-48db-b2cd-ca49b69dcef1",
                    "expectedControlType": "Analog",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "CameraRight",
                    "type": "Value",
                    "id": "151a9ec5-a8a8-49fa-a439-d1858b2eed1b",
                    "expectedControlType": "Analog",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "SpeedUp",
                    "type": "Value",
                    "id": "bf8a8aaa-d661-49ba-86d0-2a481e8cd278",
                    "expectedControlType": "Dpad",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "SpeedDown",
                    "type": "Value",
                    "id": "6f912488-cc2c-43e3-9c59-95ff261dda8e",
                    "expectedControlType": "Dpad",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Settings",
                    "type": "Button",
                    "id": "a016ae8f-2282-43b2-b206-a9f553374d32",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "61aa2ce7-1d12-4fe5-ba96-9a0f586251b3",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftStickMove",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "30c9decb-6e92-4808-a464-1ae4da83cdb1",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightStickMove",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bbd5bebb-112f-46bc-953e-10145da5acb3",
                    "path": "<Gamepad>/start",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Settings",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "746685d2-2c82-4744-85f5-0773419a3bc1",
                    "path": "<Gamepad>/leftTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CameraLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "00b0f1bb-753e-4888-8842-7c6d6b336aea",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CameraRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1c24d95f-a0d2-4c41-9aa0-efbeef91997f",
                    "path": "<Gamepad>/dpad/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SpeedUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "470efbc6-c9cf-4dc1-9d9b-a66942efad8a",
                    "path": "<Gamepad>/dpad/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SpeedDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}